fix: Add min-height to results container to ensure map visibility
* Added `min-height: 400px;` to `.map-col` and `.grid-col` within `facilities-finder.scss`. This prevents the container from collapsing and displaying only a thin line when switching to map view.

--- a/src/components/Facility/facilities-finder.scss
+++ b/src/components/Facility/facilities-finder.scss
@@ -171,7 +171,8 @@
   }
 
   .map-col {
-    width: 100%;
+  width: 100%;
+  min-height: 400px;
     margin: 0 auto;
     max-width: 1200px;
   }
@@ -290,6 +291,7 @@
 
 .grid-col {
   width: 100%;
+  min-height: 400px;
   margin-bottom: 5rem;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
